--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -963,7 +963,6 @@
   </Style>
 
   <Style Selector="RadioButton.switch_button">
-    <Setter Property="Width" Value="48"/>
     <Setter Property="Height" Value="24"/>
     <Setter Property="BorderThickness" Value="0"/>
     <Setter Property="Background" Value="Transparent"/>
@@ -987,6 +986,12 @@
     </Style>
     <Style Selector="^:checked Path">
       <Setter Property="Fill" Value="White"/>
+    </Style>
+    <Style Selector="^ TextBlock">
+      <Setter Property="Foreground" Value="{DynamicResource Brush.FG2}"/>
+    </Style>
+    <Style Selector="^:checked TextBlock">
+      <Setter Property="Foreground" Value="White"/>
     </Style>
   </Style>
 
