--- a/src/Views/RepositoryConfigure.axaml
+++ b/src/Views/RepositoryConfigure.axaml
@@ -206,7 +206,11 @@
                   <TextBox Margin="0,4,0,0" CornerRadius="3" Height="28" Text="{Binding Name, Mode=TwoWay}"/>
 
                   <TextBlock Margin="0,12,0,0" Text="{DynamicResource Text.Configure.CommitMessageTemplate.Content}"/>
-                  <v:CommitMessageTextBox Height="150" Text="{Binding Content, Mode=TwoWay}"/>
+                  <v:CommitMessageTextBox Margin="0,4,0,0" Height="100" Text="{Binding Content, Mode=TwoWay}"/>
+                  <TextBlock Margin="0,2,0,0"
+                             Text="You can use ${files_num}, ${files} and ${files:N} where N is the max number of file paths to output."
+                             Foreground="{DynamicResource Brush.FG2}"
+                             TextWrapping="Wrap"/>
                 </StackPanel>
               </DataTemplate>
             </ContentControl.DataTemplates>
