ux: change cursor to `Hand` when hover a commit hash link (#522)

--- a/src/Views/FileHistories.axaml
+++ b/src/Views/FileHistories.axaml
@@ -87,6 +87,7 @@
                   <TextBlock Grid.Column="2"
                              Classes="primary"
                              Text="{Binding SHA, Converter={x:Static c:StringConverters.ToShortSHA}}"
+                             Cursor="Hand"
                              Background="Transparent"
                              Foreground="DarkOrange"
                              TextDecorations="Underline"
