fix: Flyout should not inherits the style of its PlacementTarget (#524)

--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -192,6 +192,7 @@
     <Setter Property="MaxWidth" Value="1024"/>
     <Setter Property="MaxHeight" Value="768"/>
     <Setter Property="Padding" Value="0"/>
+    <Setter Property="Cursor" Value="Arrow"/>
 
     <Setter Property="Template">
       <ControlTemplate>
